# FastFileSearch

./: .gitignore  CMakeLists.txt  FastSearch_Windows.sln  README.md
FastSearch_Windows/: FastSearch.rc  FastSearch_Windows.vcxproj  main.cpp
